--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -26,51 +26,53 @@
 //     ],
 //     "version": "2.0.0"
 // }
-{
-    "version": "2.0.0",
-    "tasks": [
-        {
-            "label": "CMake: Configure",
-            "type": "shell",
-            "command": "cmake",
-            "args": [
-                "-B",
-                "${workspaceFolder}/build",
-                "-S",
-                "${workspaceFolder}"
-            ],
-            "group": "build",
-            "problemMatcher": []
-        },
-        {
-            "label": "CMake: Build",
-            "type": "shell",
-            "command": "cmake",
-            "args": [
-                "--build",
-                "${workspaceFolder}/build",
-                "--config",
-                "Debug"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "problemMatcher": ["$gcc"],
-            "dependsOn": ["CMake: Configure"]
-        },
-        {
-            "label": "CMake: Clean",
-            "type": "shell",
-            "command": "cmake",
-            "args": [
-                "--build",
-                "${workspaceFolder}/build",
-                "--target",
-                "clean"
-            ],
-            "group": "build",
-            "problemMatcher": []
-        }
-    ]
-}
+
+// paste from claude
+// {
+//     "version": "2.0.0",
+//     "tasks": [
+//         {
+//             "label": "CMake: Configure",
+//             "type": "shell",
+//             "command": "cmake",
+//             "args": [
+//                 "-B",
+//                 "${workspaceFolder}/build",
+//                 "-S",
+//                 "${workspaceFolder}"
+//             ],
+//             "group": "build",
+//             "problemMatcher": []
+//         },
+//         {
+//             "label": "CMake: Build",
+//             "type": "shell",
+//             "command": "cmake",
+//             "args": [
+//                 "--build",
+//                 "${workspaceFolder}/build",
+//                 "--config",
+//                 "Debug"
+//             ],
+//             "group": {
+//                 "kind": "build",
+//                 "isDefault": true
+//             },
+//             "problemMatcher": ["$gcc"],
+//             "dependsOn": ["CMake: Configure"]
+//         },
+//         {
+//             "label": "CMake: Clean",
+//             "type": "shell",
+//             "command": "cmake",
+//             "args": [
+//                 "--build",
+//                 "${workspaceFolder}/build",
+//                 "--target",
+//                 "clean"
+//             ],
+//             "group": "build",
+//             "problemMatcher": []
+//         }
+//     ]
+// }
